test/sema/shadowing.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
fn foo(x: i32) -> void {
    let x: i32 = 1;
    // CHECK: [[# @LINE - 1 ]]:9: error: redeclaration of 'x'

    if (0) {
        let x: i32 = 2;
        // CHECK: [[# @LINE - 1 ]]:13: error: redeclaration of 'x'

        if (0) {
            let x: i32 = 3;
            // CHECK: [[# @LINE - 1 ]]:17: error: redeclaration of 'x'
        }
    } else {
        let x: i32 = 4;
    }

    while (0) {
        let x: i32 = 5;
        // CHECK: [[# @LINE - 1 ]]:13: error: redeclaration of 'x'

        if (0) {
            let x: i32 = 6;
            // CHECK: [[# @LINE - 1 ]]:17: error: redeclaration of 'x'

            if (0) {
                let x: i32 = 7;
                // CHECK: [[# @LINE - 1 ]]:21: error: redeclaration of 'x'
            }
        } else {
            let x: i32 = 8;
        }
    }
}

fn main() -> void {
    foo(0);
}